<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="at.thelegend27.timemanagementtool.SignUpActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_56sdp"
            android:layout_height="@dimen/_56sdp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16sdp"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/clock_icon" />


        <TextView
            android:id="@+id/login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/logo"
            android:padding="@dimen/_8sdp"
            android:text="@string/no_text"
            android:textColor="@color/colorAccent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/forename_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_error"
            android:hint="@string/forename_hint"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/forename"
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/surename_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forename_wrapper"
            android:hint="@string/surename_hint"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/surename"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/surename_wrapper"
            android:hint="@string/email_hint"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_wrapper"
            app:passwordToggleEnabled="true"
            android:hint="@string/password_hint"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/confirm_password_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_wrapper"
            app:passwordToggleEnabled="true"
            android:hint="@string/confirm_password_hint"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.ErrorText">
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_password"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/company_wrapper"
            style="@style/AppTheme.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_wrapper"
            android:hint="@string/company_hint"
            app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
            app:hintTextAppearance="@style/AppTheme.Text.HintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/company"
                style="@style/AppTheme.TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                app:errorTextAppearance="@style/AppTheme.Text.ErrorText"
                app:hintTextAppearance="@style/AppTheme.Text.HintText" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_wrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="@dimen/_16sdp"
            android:paddingTop="@dimen/_16sdp"
            android:text="@string/sign_up_button"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_24sdp" />

        <TextView
            android:id="@+id/switch_login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_up_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_24sdp"
            android:padding="@dimen/_12sdp"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16sdp" />

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>