...
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
...
    <string name="edit_profile_old_password">Old password</string>
    <string name="logout">Logout</string>
    <string name="forename_hint">Forename</string>
    <string name="surename_hint">Surename</string>
    <string name="company_hint">Company name</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="missing_email_address">Missing Email Address</string>
    <string name="short_password">Password not strong enough. Use at least 6 characters and a mix of letters and numbers</string>
    <string name="password_must_be_same">Passwords must be the same</string>
    <string name="confirm_field_empty">Confirm field can not be empty</string>
    <string name="original_field_empty">Original Field can not be empty</string>
    <string name="submit_user">Submit User</string>
    <string name="create_a_new_department">Create a new Department</string>
    <string name="department_name">Department Name</string>
    <string name="department_supervisor">Department Supervisor</string>
    <string name="submit_department">Submit Department</string>
    <string name="department_dropdown_title">Department</string>
...
